bin/tests/snapshots/blank_lines__6e9802af6cf7a9a23476e89f8595622f_lint_stderr.snap
---
source: bin/tests/blank_lines.rs
assertion_line: 7
---
{
  alpha = 1;


  beta = 2;
}
---
[blank_lines] Warning: Excess blank lines
   ╭─[ <temp_file_path>:2:13 ]
   │
 2 │ ╭─▶   alpha = 1;
   ┆ ┆   
 5 │ ├─▶   beta = 2;
   │ │                 
   │ ╰───────────────── no more than one blank line may follow one another
───╯
