bin/tests/snapshots/blank_lines__730cdff01a4c5e62c630a7ce8da9b5bb_fix.snap
---
source: bin/tests/blank_lines.rs
assertion_line: 7
---
{
  alpha = 1;

  beta = 2;

}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,6 +1,5 @@
 {
   alpha = 1;
 
   beta = 2;
-
 }
