bin/tests/snapshots/blank_lines__730cdff01a4c5e62c630a7ce8da9b5bb_lint_json.snap
---
source: bin/tests/blank_lines.rs
assertion_line: 7
---
{
  alpha = 1;

  beta = 2;

}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "blank_lines",
      "note": "Excess blank lines",
      "code": 35,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 4,
              "column": 12
            },
            "to": {
              "line": 6,
              "column": 1
            }
          },
          "message": "no blank line may come before the closing delimiter",
          "suggestion": {
            "at": {
              "from": {
                "line": 4,
                "column": 12
              },
              "to": {
                "line": 6,
                "column": 1
              }
            },
            "fix": "\n"
          }
        }
      ]
    }
  ]
}
