bin/tests/snapshots/blank_lines__a6ef40a2ceb85fa4ea8151973cb12c62_fix.snap
---
source: bin/tests/blank_lines.rs
assertion_line: 7
---
{
  letters = [
    "a"
    "b"

  ];
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,7 +1,6 @@
 {
   letters = [
     "a"
     "b"
-
   ];
 }
