bin/tests/snapshots/blank_lines__a6ef40a2ceb85fa4ea8151973cb12c62_lint_errfmt.snap
---
source: bin/tests/blank_lines.rs
assertion_line: 7
---
{
  letters = [
    "a"
    "b"

  ];
}
---
<temp_file_path>>4:8:W:35:[blank_lines] no blank line may come before the closing delimiter
