bin/tests/snapshots/blank_lines__a6ef40a2ceb85fa4ea8151973cb12c62_lint_stderr.snap
---
source: bin/tests/blank_lines.rs
assertion_line: 7
---
{
  letters = [
    "a"
    "b"

  ];
}
---
[blank_lines] Warning: Excess blank lines
   ╭─[ <temp_file_path>:4:8 ]
   │
 4 │ ╭─▶     "b"
   ┆ ┆   
 6 │ ├─▶   ];
   │ │          
   │ ╰────────── no blank line may come before the closing delimiter
───╯
