bin/tests/snapshots/blank_lines__ad763585af5a6c06134f1b4255604711_fix.snap
---
source: bin/tests/blank_lines.rs
assertion_line: 7
---
let
  alpha = 1;


  beta = 2;
in
  foo + bar
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,7 +1,6 @@
 let
   alpha = 1;
 
-
   beta = 2;
 in
   foo + bar
