bin/tests/snapshots/blank_lines__ad763585af5a6c06134f1b4255604711_lint_json.snap
---
source: bin/tests/blank_lines.rs
assertion_line: 7
---
let
  alpha = 1;


  beta = 2;
in
  foo + bar
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "blank_lines",
      "note": "Excess blank lines",
      "code": 35,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 2,
              "column": 13
            },
            "to": {
              "line": 5,
              "column": 3
            }
          },
          "message": "no more than one blank line may follow one another",
          "suggestion": {
            "at": {
              "from": {
                "line": 2,
                "column": 13
              },
              "to": {
                "line": 5,
                "column": 3
              }
            },
            "fix": "\n\n  "
          }
        }
      ]
    }
  ]
}
